rusty-cdk/tests/snapshots/snapshots__api_gateway_and_existing_lambdas_keeps_ids.snap
---
source: rusty-cdk/tests/snapshots.rs
expression: synthesized
---
{
  "Metadata": {
    "myAGW": "[HttpApiGateway]",
    "myAGWIntegration": "[HttpApiIntegration]",
    "myAGWPermission": "[LambdaPermission]",
    "myAGWStage": "[HttpApiStage]",
    "myAGWmyFun": "[HttpApiRoute]",
    "myFun": "LambdaFunction980704468",
    "myFunLogGroup": "LogGroup2215447583",
    "myFunRole": "LambdaFunctionRole1001400925"
  },
  "Resources": {
    "[HttpApiGateway]": {
      "Properties": {
        "DisableExecuteApiEndpoint": true,
        "Name": "exampleGW",
        "ProtocolType": "HTTP"
      },
      "Type": "AWS::ApiGatewayV2::Api"
    },
    "[HttpApiIntegration]": {
      "Properties": {
        "ApiId": {
          "Ref": "[HttpApiGateway]"
        },
        "IntegrationType": "AWS_PROXY",
        "IntegrationUri": {
          "Fn::GetAtt": [
            "LambdaFunction980704468",
            "Arn"
          ]
        },
        "PayloadFormatVersion": "2.0"
      },
      "Type": "AWS::ApiGatewayV2::Integration"
    },
    "[HttpApiRoute]": {
      "Properties": {
        "ApiId": {
          "Ref": "[HttpApiGateway]"
        },
        "RouteKey": "GET /books",
        "Target": {
          "Fn::Join": [
            "",
            [
              "integrations/",
              {
                "Ref": "[HttpApiIntegration]"
              }
            ]
          ]
        }
      },
      "Type": "AWS::ApiGatewayV2::Route"
    },
    "[HttpApiStage]": {
      "Properties": {
        "ApiId": {
          "Ref": "[HttpApiGateway]"
        },
        "AutoDeploy": true,
        "StageName": "$default"
      },
      "Type": "AWS::ApiGatewayV2::Stage"
    },
    "LambdaFunction980704468": {
      "Properties": {
        "Architectures": [
          "arm64"
        ],
        "Code": {
          "S3Bucket": "some-bucket",
          "S3Key": "[Asset]"
        },
        "Handler": "bootstrap",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "LogGroup2215447583"
          }
        },
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "LambdaFunctionRole1001400925",
            "Arn"
          ]
        },
        "Runtime": "provided.al2023",
        "Timeout": 30
      },
      "Type": "AWS::Lambda::Function"
    },
    "LambdaFunctionRole1001400925": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sts:AssumeRole"
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ],
        "Policies": []
      },
      "Type": "AWS::IAM::Role"
    },
    "[LambdaPermission]": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "LambdaFunction980704468",
            "Arn"
          ]
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region"
              },
              ":",
              {
                "Ref": "AWS::AccountId"
              },
              ":",
              {
                "Ref": "[HttpApiGateway]"
              },
              "*/*/books"
            ]
          ]
        }
      },
      "Type": "AWS::Lambda::Permission"
    },
    "LogGroup2215447583": {
      "Properties": {
        "RetentionInDays": 731
      },
      "Type": "AWS::Logs::LogGroup"
    }
  }
}
